# cross-magic

./: .gitignore  Cargo.toml  README.md  prompt.txt  strings.json
llama-model/: get-model.bat  get-model.sh
ollama-model/: ModelFile
src/: game.rs  game_widgets.rs  generate.rs  llm.rs  main.rs  puzzle.rs  render.rs  ui.rs  widgets.rs
ui-lib/: Cargo.toml  README.md
ui-lib/examples/: simple_button.rs
ui-lib/src/: core.rs  layout.rs  lib.rs  widgets.rs
