[package]
name = "cross-magic"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
ollama_embed = { git = "https://www.github.com/BenjaminMassey/ollama_embed" }
rand = "0.9.1"
reqwest = { version = "0.12.23", features = [ "blocking" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
cross-magic-ui = { path = "ui-lib" }
